--- a/FullApp_v1/V2_App/templates/landing.html
+++ b/FullApp_v1/V2_App/templates/landing.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     />
 
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
 
     <link
       rel="stylesheet"
@@ -33,7 +33,11 @@
       href="../stiatic/fonts/fontawesome5-overrides.min.css"
     />
     <!-- <link rel="stylesheet" href="assets/css/untitled.css"> -->
-    <nav
+  </head>
+
+  <body id="page-top">
+    <div id="wrapper">
+      <nav
         class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0"
       >
         <div class="container-fluid d-flex flex-column p-0">
@@ -75,11 +79,6 @@
           <div class="text-center d-none d-md-inline"></div>
         </div>
       </nav>
-
-</head>
-
-  <body id="page-top">
-    <div id="wrapper">
       <div class="d-flex flex-column" id="content-wrapper">
         <div id="content">
           <nav
@@ -373,11 +372,15 @@
             <!-- <a class="btn btn-default btn-lg" id="start" onclick="changeUploadStat()">Start!</a> -->
 
             <form action="" method="post">
-                <button class="btn btn-primary btn-sm d-none d-sm-inline-block" name="foo" value="upvote"><i class="fas fa-download fa-sm text-white-50"></i
+                <button class="btn btn-primary btn-sm d-none d-sm-inline-block" name="foo" value="Do Something Man!"><i class="fas fa-download fa-sm text-white-50"></i
                     >&nbsp;Visualize</button>
+                
             </form>
 
-           
+
+            
+
+
             </div>
             <div class="row">
               <div class="col-md-6 col-xl-3 mb-4">
@@ -488,7 +491,7 @@
                         text-align: right;
                       "
                     >
-                      <button
+                      <!-- <button
                         class="btn btn-primary"
                         type="button"
                         style="
@@ -548,9 +551,12 @@
                         "
                       >
                         6m</button
-                      ><button
+                      > -->
+                      
+                     
+                      <!-- <button
                         class="btn btn-primary"
-                        type="button"
+                        type="submit" value="12msss"
                         style="
                           font-size: 12px;
                           padding-top: 4.5px;
@@ -560,7 +566,51 @@
                         "
                       >
                         12m
-                      </button>
+                      </button> -->
+
+                      <form action="" method="post">
+                        <button class="btn btn-primary" name="foox" value="1" style="
+                        font-size: 12px;
+                        padding-top: 4.5px;
+                        padding-right: 9px;
+                        padding-bottom: 4.5px;
+                        padding-left: 9px;
+                      ">&nbsp;1d</button>
+
+                        <button class="btn btn-primary" name="foox" value="2" style="
+                        font-size: 12px;
+                        padding-top: 4.5px;
+                        padding-right: 9px;
+                        padding-bottom: 4.5px;
+                        padding-left: 9px;
+                        ">&nbsp;1w</button>
+
+                        <button class="btn btn-primary" name="foox" value="3" style="
+                                                font-size: 12px;
+                                                padding-top: 4.5px;
+                                                padding-right: 9px;
+                                                padding-bottom: 4.5px;
+                                                padding-left: 9px;
+                                            ">&nbsp;1m</button>
+
+                        <button class="btn btn-primary" name="foox" value="4" style="
+                        font-size: 12px;
+                        padding-top: 4.5px;
+                        padding-right: 9px;
+                        padding-bottom: 4.5px;
+                        padding-left: 9px;
+                        ">&nbsp;6m</button>
+
+                        <button class="btn btn-primary" name="foox" value="5" style="
+                                                font-size: 12px;
+                                                padding-top: 4.5px;
+                                                padding-right: 9px;
+                                                padding-bottom: 4.5px;
+                                                padding-left: 9px;
+                                            ">&nbsp;12m</button>
+                        
+                     </form>
+                    
                     </div>
                   </div>
 
