--- a/FullApp_v1/V2_App/templates/models.html
+++ b/FullApp_v1/V2_App/templates/models.html
@@ -136,9 +136,9 @@
                                     <h6 class="text-primary fw-bold m-0">LSTM</h6>
                                 </div>
                                 <div class="card-body">
-                                    <h4 class="small fw-bold">RMSE<span class="float-end">{{v1}}</span></h4>
+                                    <h4 class="small fw-bold">RMSE<span class="float-end">{{LSTM[0]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
-                                        <div class="progress-bar bg-danger" id="" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;"><span class="visually-hidden">20%</span></div>
+                                        <div class="progress-bar bg-danger" id="" aria-valuenow="{{LSTM[0]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{LSTM[0]}}%;"><span class="visually-hidden">{{LSTM[0]}}%</span></div>
                                     </div>
 
 
@@ -148,35 +148,18 @@
 
                                     
 
-                                    <h4 class="small fw-bold">AIC<span class="float-end">40</span></h4>
+                                    <h4 class="small fw-bold">AIC<span class="float-end">{{LSTM[1]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
-                                        <div class="progress-bar bg-warning" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"><span class="visually-hidden">40%</span></div>
+                                        <div class="progress-bar bg-warning" aria-valuenow="{{LSTM[1]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{LSTM[1]}}%;"><span class="visually-hidden">{{LSTM[1]}}%</span></div>
                                     </div>
-                                    <h4 class="small fw-bold">M-DM Test<span class="float-end">60</span></h4>
+                                    <h4 class="small fw-bold">M-DM Test<span class="float-end">{{LSTM[2]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
-                                        <div class="progress-bar bg-primary" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="visually-hidden">60%</span></div>
+                                        <div class="progress-bar bg-primary" aria-valuenow="{{LSTM[2]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{LSTM[2]}}%;"><span class="visually-hidden">{{LSTM[2]}}%</span></div>
                                     </div><button class="btn btn-primary" type="button" style="font-size: 12px;">Download</button>
                                 </div>
                             </div>
                         </div>
-                        
-                        <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-
-                            
-
-                          <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                          <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                          <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                        
-
+                    
                         <div class="col-lg-4">
                             <div class="card mb-3"></div>
                             <div class="card shadow mb-4">
@@ -184,17 +167,17 @@
                                     <h6 class="text-primary fw-bold m-0">GARCH + ARIMA + EMS</h6>
                                 </div>
                                 <div class="card-body">
-                                    <h4 class="small fw-bold">RMSE<span class="float-end">20</span></h4>
+                                    <h4 class="small fw-bold">RMSE<span class="float-end">{{threeModels[0]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
-                                        <div class="progress-bar bg-danger" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;"><span class="visually-hidden">20%</span></div>
+                                        <div class="progress-bar bg-danger" aria-valuenow="{{threeModels[0]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{threeModels[0]}}%;"><span class="visually-hidden">{{threeModels[0]}}%</span></div>
                                     </div>
-                                    <h4 class="small fw-bold">AIC<span class="float-end">40</span></h4>
+                                    <h4 class="small fw-bold">AIC<span class="float-end">{{threeModels[1]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
-                                        <div class="progress-bar bg-warning" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"><span class="visually-hidden">40%</span></div>
+                                        <div class="progress-bar bg-warning" aria-valuenow="{{threeModels[1]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{threeModels[1]}}%;"><span class="visually-hidden">{{threeModels[1]}}%</span></div>
                                     </div>
-                                    <h4 class="small fw-bold">M-DM Test<span class="float-end">60</span></h4>
+                                    <h4 class="small fw-bold">M-DM Test<span class="float-end">{{threeModels[2]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
-                                        <div class="progress-bar bg-primary" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="visually-hidden">60%</span></div>
+                                        <div class="progress-bar bg-primary" aria-valuenow="{{threeModels[2]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{threeModels[2]}}%;"><span class="visually-hidden">{{threeModels[2]}}%</span></div>
                                     </div><button class="btn btn-primary" type="button" style="font-size: 12px;">Download</button>
                                 </div>
                             </div>
@@ -206,17 +189,17 @@
                                     <h6 class="text-primary fw-bold m-0">SVR</h6>
                                 </div>
                                 <div class="card-body">
-                                    <h4 class="small fw-bold">RMSE<span class="float-end">20</span></h4>
+                                    <h4 class="small fw-bold">RMSE<span class="float-end">{{SVR[0]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
-                                        <div class="progress-bar bg-danger" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;"><span class="visually-hidden">20%</span></div>
+                                        <div class="progress-bar bg-danger" aria-valuenow="{{SVR[0]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{SVR[0]}}%;"><span class="visually-hidden">{{SVR[0]}}%</span></div>
                                     </div>
-                                    <h4 class="small fw-bold">AIC<span class="float-end">40</span></h4>
+                                    <h4 class="small fw-bold">AIC<span class="float-end">{{SVR[1]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
-                                        <div class="progress-bar bg-warning" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"><span class="visually-hidden">40%</span></div>
+                                        <div class="progress-bar bg-warning" aria-valuenow="{{SVR[1]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{SVR[1]}}%;"><span class="visually-hidden">{{SVR[1]}}%</span></div>
                                     </div>
-                                    <h4 class="small fw-bold">M-DM Test<span class="float-end">60</span></h4>
+                                    <h4 class="small fw-bold">M-DM Test<span class="float-end">{{SVR[2]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
-                                        <div class="progress-bar bg-primary" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="visually-hidden">60%</span></div>
+                                        <div class="progress-bar bg-primary" aria-valuenow="{{SVR[2]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{SVR[2]}}%;"><span class="visually-hidden">{{SVR[2]}}%</span></div>
                                     </div><button class="btn btn-primary" type="button" style="font-size: 12px;">Download</button>
                                 </div>
                             </div>
