--- a/FullApp_v1/V2_App/templates/home.html
+++ b/FullApp_v1/V2_App/templates/home.html
@@ -59,7 +59,7 @@
                 </form>
               <div id="static_file_response"> </div>
              
-              <script type="text/javascript" src="/static/app.js"></script>
+              <script></script>
               </script>
         
         </div>
