--- a/FullApp_v1/V2_App/static/css/layout.css
+++ b/FullApp_v1/V2_App/static/css/layout.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
 
 :root {
-    --header-height: 3rem;
-    --nav-width: 68px;
+    --header-height: 1rem;
+    --nav-width: 8-px;
     --first-color: #4723D9;
     --first-color-light: #AFA5D9;
     --white-color: #F7F6FB;
@@ -19,7 +19,8 @@
 
 body {
     position: relative;
-    margin: var(--header-height) 0 0 0;
+    margin: var(--header-height)  ;
+    left: calc(var(--main-padding) 12rem);
     padding: 0 1rem;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
