--- a/FullApp_v1/V2_App/templates/landing.html
+++ b/FullApp_v1/V2_App/templates/landing.html
@@ -53,7 +53,7 @@
                         <a href="/models" class="nav_link"> <i class='bx bx-bookmark nav_icon'></i>
                             <span class="nav_name">Models</span> </a> 
                         <a href="/indicators" class="nav_link"> <i class='bx bx-folder nav_icon'></i> 
-                            <span class="nav_name">PREDICTIONS</span> </a>  </div>
+                            <span class="nav_name">Indicators</span> </a>  </div>
                 </div>
             </nav>
         </div>
@@ -481,7 +481,23 @@
             //   borderColor:'white',
             //   hoverBorderWidth: 3,
             //   hoverBorderColor: 'black'
-            }]
+            },
+            {
+              label:'Pred Price',
+              data:{{values | tojson}},
+       
+              fill: false,
+              borderColor: 'rgb(0, 0, 0)',
+              tension: 0.1
+            //   // backgroundColor: 'green',
+            //   backgroundColor:'#2ac7db',
+            //   borderWidth:1,
+            //   borderColor:'white',
+            //   hoverBorderWidth: 3,
+            //   hoverBorderColor: 'black'
+            },
+        
+        ]
           },
         //   options:{
         //     title:{
