--- a/FullApp_v1/V2_App/templates/models.html
+++ b/FullApp_v1/V2_App/templates/models.html
@@ -34,7 +34,7 @@
                                 <a href="/models" class="nav_link"> <i class='bx bx-bookmark nav_icon'></i>
                                     <span class="nav_name">Models</span> </a> 
                                 <a href="/indicators" class="nav_link"> <i class='bx bx-folder nav_icon'></i> 
-                                    <span class="nav_name">PREDICTIONS</span> </a>  </div>
+                                    <span class="nav_name">Indicators</span> </a>  </div>
                         </div>
                     </nav>
                 </div>
