--- a/FullApp_v1/V2_App/templates/prediction.html
+++ b/FullApp_v1/V2_App/templates/prediction.html
@@ -55,14 +55,11 @@
                       <a href="/models" class="nav_link"> <i class='bx bx-bookmark nav_icon'></i>
                           <span class="nav_name">Models</span> </a> 
                       <a href="/indicators" class="nav_link"> <i class='bx bx-folder nav_icon'></i> 
-                          <span class="nav_name">PREDICTIONS</span> </a>  </div>
+                          <span class="nav_name">Indicators</span> </a>  </div>
               </div>
           </nav>
       </div>
-      <!--Container Main start-->
-      <!-- <div class="height-100 bg-light">
-          <h4>Main Components</h4>
-      </div> -->
+
       <script>
               document.addEventListener("DOMContentLoaded", function(event) {
 
