--- a/FullApp_v1/V2_App/templates/landing.html
+++ b/FullApp_v1/V2_App/templates/landing.html
@@ -106,7 +106,7 @@
         <!-- Nav -->
 
 
-      <div class="d-flex flex-column" id="content-wrapper">
+      <div class="d-flex flex-column">
         <div id="content">
 
           <h3 class="text-dark mb-4" style="padding-left: 21px">Dashboard</h3>
@@ -421,13 +421,7 @@
             </div>
           </div>
         </div>
-        <footer class="bg-white sticky-footer">
-          <div class="container my-auto">
-            <div class="text-center my-auto copyright">
-              <span>Copyright © Brand 2022</span>
-            </div>
-          </div>
-        </footer>
+        
       </div>
       <a class="border rounded d-inline scroll-to-top" href="#page-top"
         ><i class="fas fa-angle-up"></i
